# iris

./: .gitmodules  CMakeLists.txt
.github/workflows/: release.yml  windows.yml
frontend/: imgui.cpp  input.cpp  iris.cpp  iris.hpp  settings.cpp  vulkan.cpp
frontend/ui/: memory_card_tool.cpp  settings.cpp
src/dev/: ds.c
src/ee/: dmac.h  intc.h  vu.h
src/iop/: bus.c  iop_export.c  iop_export.h
src/iop/hle/: ioman.cpp  ioman.h
src/ipu/: dct_coeff_table1.cpp  ipu.cpp
